[package]
name = "raos"
version = "0.0.0-dev"
edition = "2021"
description = "Async Rust implementation of the OAuth 2.1 Authorization Server"
repository = "https://github.com/ikkerens/raos"
license = "MIT"

[dependencies]
async-trait = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1"
base64 = "0.22"
url = { version = "2", features = ["serde"] }
sha2 = "0.10"
subtle = { version = "2", features = ["const-generics", "core_hint_black_box"] }

rand = { version = ">=0.5", optional = true }
dashmap = { version = "6", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-test = { version = "0.4" }
mockall = "0.13"

[features]
default = []
memory-impls = ["rand", "dashmap"]
_doctest = []

[package.metadata.docs.rs]
features = ["_doctest"]
