[package]
name = "raos_actix"
version = "0.0.0-dev"
edition = "2021"
description = "Async wrapper for raos using actix-web"
repository = "https://github.com/ikkerens/raos"
license = "MIT"

[dependencies]
raos = { path = "../raos", version = "=0.0.0-dev", features = ["memory-impls"] }
actix-web = { version = "4", default-features = false }
futures = "0.3"
url = "2"

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
example_support = { path = "../example_support" }

[[example]]
name = "actix"
